--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+.btn {
+  padding: 10px;
+  background-color: white;
+  border-radius: 4px;
+}
+.btn:focus {
+  outline: none;
+  cursor: pointer;
+}
